src/app/home/home.component.css
.mat-toolbar {
    background: #1976D2;
    color: white;
    
    padding: 25px;
    margin-bottom: 10px;

    height: 80px;

    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.mat-toolbar h1 {
    font-size: 22pt;
}


.mat-toolbar #toolbar_actions{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.mat-toolbar #toolbar_actions button{
    margin-left: 25px;
}

.mat-fab {
    background: #ff1744;
    
    /* position: relative;
    top: 38px;
    right: 10px; */
}

/* .fill_remaining, app-search-torrents {
    flex: 1 0 auto;
} */

app-search-torrents {
    flex-grow: 0.8;
    margin-left: 20px;
    margin-right: 20px;
}

.spacer {
    flex: 1;
}

.homeContainer{
    flex: 1;
    min-height: 100vh;
    width: 100%;
}

.content {
    display: flex;
    min-height: 100%;
    width: 100%;
    padding: 5px;
    
    flex-grow: 1;
    flex-direction: column;
}

